tdf#120301 oox: lclIsWhiteSpace should return true for a space

Change-Id: I72c79c1fed4d9a91bf02024eef23cd3b1a58632e